--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title th:text=${title}></title>
   <script th:src="@{/index.js}"></script>
+  <link rel="stylesheet" th:href="@{/index.css}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
   <h1>INGRESAR DATOS DEL NUEVO HUESPED</h1>
-  <form action="">
+  <form id="formulario" action="/crear-huesped" method="post" novalidate>
     <div class="form-group">
       <label for="apellido">Apellido*</label>
       <input class="form-control-sm" type="text" name="apellido" id="apellido" placeholder="Apellido">
@@ -20,7 +21,7 @@
       <input class="" type="date" name="fecha-nac" id="fecha-nac">
     </div>
     <div class="form-group">
-      <label for="tipo-doc">Tipo de documento</label>
+      <label for="tipo-doc">Tipo de documento*</label>
       <select class="form-control-sm" name="tipo-doc" id="tipo-doc">
         <option selected value="dni">DNI</option>
         <option value="pasaporte">Pasaporte</option>
@@ -46,10 +47,10 @@
     <label for="provincia">Provincia*</label>
     <input class="form-control-sm" type="text" name="provincia" id="provincia" placeholder="Provincia">
     <label for="localidad">Localidad*</label>
+    <input class="form-control-sm" type="text" name="localidad" id="localidad" placeholder="Localidad">
     <label class="form-control-sm" for="codigo-postal">Código postal*</label>
     <input type="number" name="codigo-postal" id="codigo-postal" placeholder="Código postal">
-    <input class="form-control-sm" type="text" name="localidad" id="localidad" placeholder="Localidad">
-    <label for="telefono">Teléfono</label>
+    <label for="telefono">Teléfono*</label>
     <select class="form-control-sm" name="prefijo" id="prefijo">
       <option value="54" selected >+54</option>
     </select>
@@ -67,8 +68,10 @@
     </select>
     <label for="cuit">C.U.I.T.</label>
     <input class="form-control-sm" type="text" name="cuit" id="cuit" placeholder="99-.99.999.999-9">
+    <button type="submit" id="boton" class="btn btn-primary">Siguiente</button>
+    <button type="reset" id="cancelar">Cancelar</button>
   </form>
-  <div id="falta-nombre" class="Hola" hidden>Debe ingresar el nombre</div>
-  <button id="boton" class="btn btn-primary">apretar</button>
+  <ul id="errores"></ul>
+  <ul id="error-formato"></ul>
 </body>
 </html>
