--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -13,3 +13,15 @@ input:focus {
     border-color: #3f51b5;
     box-shadow: 0 0 5px rgba(63, 81, 181, 0.5);
 }
+
+.modal{
+    position: fixed; 
+    z-index: 1; 
+    left: 50%;
+    top: 50%;
+    width: 25%; 
+    height: 25%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
+}
