--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,24 +5,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title th:text=${title}></title>
   <script th:src="@{/index.js}"></script>
-  <link rel="stylesheet" th:href="@{/index.css}">
+  <link rel="stylesheet" th:href="@{/style.css}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
+  <div th:if="${success}" id="modal-success" class="modal modal-success">
+    <div class="modal-content">
+      <p th:text=${success}></p>
+      <button id="button-si" class="btn btn-primary">Sí</button>
+      <button id="button-no" class="btn btn-outline-danger">No</button>
+    </div>
+  </div>
+  <div th:if="${error}" id="modal-error" class="modal modal-error">
+    <div class="modal-content">
+      <p th:text=${error}></p>
+      <button id="button-aceptar" class="btn btn-primary">Aceptar igualmente</button>
+      <button id="button-corregir" class="btn btn-outline-danger">Corregir</button>
+    </div>
+  </div>
+  <div id="modal-seguro" class="modal modal-seguro" style="display: none;">
+    <div class="modal-content">
+      <p>¿Desea cancelar el alta del huésped?</p>
+      <button id="button-cancelar-si" class="btn btn-primary">Sí</button>
+      <button id="button-cancelar-no" class="btn btn-outline-danger">No</button>
+    </div>
+  </div>
   <h1>INGRESAR DATOS DEL NUEVO HUESPED</h1>
   <form id="formulario" action="/crear-huesped" method="post" novalidate>
     <div class="form-group">
       <label for="apellido">Apellido*</label>
       <input class="form-control-sm" type="text" name="apellido" id="apellido" placeholder="Apellido">
-      <label for="nombres">Nombres*</label>
-      <input class="form-control-sm" type="text" name="nombres" id="nombres" placeholder="Nombres">
+      <label for="nombre">Nombres*</label>
+      <input class="form-control-sm" type="text" name="nombre" id="nombre" placeholder="Nombres">
       <label for="fecha-nac">Fecha de nacimiento*</label>
-      <input class="" type="date" name="fecha-nac" id="fecha-nac">
+      <input class="" type="date" name="fechaNac" id="fecha-nac">
     </div>
     <div class="form-group">
       <label for="tipo-doc">Tipo de documento*</label>
-      <select class="form-control-sm" name="tipo-doc" id="tipo-doc">
+      <select class="form-control-sm" name="tipoDocumento" id="tipo-doc">
         <option selected value="dni">DNI</option>
         <option value="pasaporte">Pasaporte</option>
         <option value="lc">LC</option>
@@ -30,16 +51,16 @@
         <option value="otro">Otro</option>
       </select>
       <label for="nro-doc">Numero de documento*</label>
-      <input class="form-control-sm" type="number" name="nro-doc" id="nro-doc" placeholder="99.999.999">
+      <input class="form-control-sm" type="number" name="nroDocumento" id="nro-doc" placeholder="99.999.999">
       <label for="nacionalidad">Nacionalidad*</label>
       <input class="form-control-sm" type="text" name="nacionalidad" id="nacionalidad" placeholder="Nacionalidad">
     </div>
     <label for="calle">Dirección*</label>
     <input class="form-control-sm" type="text" name="calle" id="calle" placeholder="Calle(*)">
     <label for="nro-calle">Número*</label>
-    <input class="form-control-sm" type="number" name="nro-calle" id="nro-calle" placeholder="Número(*)">
+    <input class="form-control-sm" type="number" name="numero" id="nro-calle" placeholder="Número(*)">
     <label for="depto">Departamento</label>
-    <input class="form-control-sm" type="text" name="depto" id="depto" placeholder="Departamento">
+    <input class="form-control-sm" type="text" name="departamento" id="depto" placeholder="Departamento">
     <label for="piso">Piso</label> 
     <input class="form-control-sm" type="number" name="piso" id="piso" placeholder="Piso">
     <label for="pais">País*</label>
@@ -49,7 +70,7 @@
     <label for="localidad">Localidad*</label>
     <input class="form-control-sm" type="text" name="localidad" id="localidad" placeholder="Localidad">
     <label class="form-control-sm" for="codigo-postal">Código postal*</label>
-    <input type="number" name="codigo-postal" id="codigo-postal" placeholder="Código postal">
+    <input type="number" name="codPostal" id="codigo-postal" placeholder="Código postal">
     <label for="telefono">Teléfono*</label>
     <select class="form-control-sm" name="prefijo" id="prefijo">
       <option value="54" selected >+54</option>
@@ -60,7 +81,7 @@
     <label for="ocupacion">Ocupación*</label>
     <input class="form-control-sm" type="text" name="ocupacion" id="ocupacion" placeholder="Ocupación">
     <label for="posicion-iva">Posición frente al IVA*</label>
-    <select class="form-control-sm" name="posicion-iva" id="posicion-iva">
+    <select class="form-control-sm" name="posicionIva" id="posicion-iva">
       <option value="consumidor-final" selected>Consumidor Final</option>
       <option selected value="responsable-inscripto">Responsable Inscripto</option>
       <option value="monotributista">Monotributista</option>
@@ -69,7 +90,7 @@
     <label for="cuit">C.U.I.T.</label>
     <input class="form-control-sm" type="text" name="cuit" id="cuit" placeholder="99-.99.999.999-9">
     <button type="submit" id="boton" class="btn btn-primary">Siguiente</button>
-    <button type="reset" id="cancelar">Cancelar</button>
+    <button type="button" id="cancelar">Cancelar</button>
   </form>
   <ul id="errores"></ul>
   <ul id="error-formato"></ul>
