--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,232 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+<div th:fragment="page-content">
+  <h1>Hola index</h1>
+  <a class="btn btn-primary" href="/huesped/crear">Dar de Alta Huesped</a>
+  <a class="btn btn-primary" href="/habitaciones/reservar">Reservar habitación</a>
+  <a class="btn btn-primary" href="/habitaciones/estado">Mostrar Estado de Habitaciones</a>
+  <a class="btn btn-primary" href="/huesped/buscar">Buscar Huesped</a>
+  <a class="btn btn-primary" href="/habitacion/ocupar">Ocupar Habitación</a>
+</div>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title th:text="${title}"></title>
-  <script th:src="@{/index.js}"></script>
-  <script th:src="@{/select.js}"></script>
-  <link rel="stylesheet" th:href="@{/style.css}" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-</head>
-
-<body>
-  <div th:if="${success}" id="modal-success" class="simple-modal modal-success">
-    <div class="modal-content">
-      <p th:text="${success}"></p>
-      <button id="button-si" class="btn btn-primary">Sí</button>
-      <button id="button-no" class="btn btn-outline-danger">
-        No
-      </button>
-    </div>
-  </div>
-
-  <script th:if="${success}">
-    const modalSuccess = document.getElementById("modal-success");
-    modalSuccess.style.display = "block";
-    const botonSi = document.getElementById("button-si");
-    const botonNo = document.getElementById("button-no");
-    botonSi.addEventListener("click", function () {
-      modalSuccess.style.display = "none";
-      window.location.reload();
-    });
-    botonNo.addEventListener("click", function () {
-      modalSuccess.style.display = "none";
-      window.location.href = "/";
-    });
-  </script>
-
-  <div th:if="${error}" id="modal-error" class="simple-modal modal-error">
-    <div class="modal-content">
-      <p th:text="${error}"></p>
-      <button id="button-aceptar" class="btn btn-primary">
-        Aceptar igualmente
-      </button>
-      <button id="button-corregir" class="btn btn-outline-danger">
-        Corregir
-      </button>
-    </div>
-  </div>
-
-  <div id="modal-seguro" class="simple-modal modal-seguro" style="display: none">
-    <div class="modal-content">
-      <p>¿Desea cancelar el alta del huésped?</p>
-      <button id="button-cancelar-si" class="btn btn-primary">
-        Sí
-      </button>
-      <button id="button-cancelar-no" class="btn btn-outline-danger">
-        No
-      </button>
-    </div>
-  </div>
-
-  <div class="container my-5">
-    <div class="card shadow p-4 mx-auto" style="max-width: 1000px;">
-  <h1 class="text-center mb-4" >INGRESAR DATOS DEL NUEVO HUESPED</h1>
-  <form id="formulario" action="/crear-huesped" th:object="${nuevoHuespedDTO}" method="post" novalidate>
-    <div class="row mb-3">
-      <div class="col-md-4">
-        <label for="apellido">Apellido*</label>
-        <input class="form-control form-control-sm" type="text" th:field="*{apellido}" name="apellido" id="apellido"
-          placeholder="Apellido" />
-      </div>
-      <div class="col-md-4">
-        <label for="nombre">Nombres*</label>
-        <input class="form-control form-control-sm" type="text" th:field="*{nombre}" name="nombre" id="nombre"
-          placeholder="Nombres" />
-      </div>
-      <div class="col-md-4">
-        <label for="fecha-nac">Fecha de nacimiento*</label>
-        <input class="form-control" type="date" th:field="*{fechaNac}" name="fechaNac" id="fecha-nac" />
-      </div>
-    </div>
-
-    <div class="row mb-3">
-      <div class="col-md-4">
-        <label for="tipo-doc">Tipo de documento*</label>
-        <select class="form-select form-select-sm" th:field="*{tipoDocumento}" name="tipoDocumento" id="tipo-doc">
-          <option selected value="dni">DNI</option>
-          <option value="pasaporte">Pasaporte</option>
-          <option value="lc">LC</option>
-          <option value="le">LE</option>
-          <option value="otro">Otro</option>
-        </select>
-      </div>
-      <div class="col-md-4">
-        <label for="nro-doc">Numero de documento*</label>
-        <input class="form-control form-control-sm" type="number" th:field="*{nroDocumento}" name="nroDocumento" id="nro-doc"
-          placeholder="99.999.999" />
-      </div>
-      <div class="col-md-4">
-        <label for="nacionalidad">Nacionalidad*</label>
-        <input class="form-control form-control-sm" type="text" th:field="*{nacionalidad}" name="nacionalidad" id="nacionalidad"
-          placeholder="Nacionalidad" />
-      </div>
-    </div>
-
-    <div class="row mb-3">
-      <div class="col-md-6">
-        <label for="calle">Dirección*</label>
-        <input class="form-control form-control-sm" type="text" th:field="*{calle}" name="calle" id="calle" placeholder="Calle" />
-      </div>
-      <div class="col-md-2">
-        <label for="nro-calle">Número*</label>
-        <input class="form-control form-control-sm" type="number" th:field="*{numero}" name="numero" id="nro-calle"
-          placeholder="Número" />
-      </div>
-      <div class="col-md-2">
-        <label for="depto">Departamento</label>
-        <input class="form-control form-control-sm" type="text" th:field="*{departamento}" name="departamento" id="depto"
-          placeholder="Departamento" />
-      </div>
-      <div class="col-md-2">
-        <label for="piso">Piso</label>
-        <input class="form-control form-control-sm" type="number" th:field="*{piso}" name="piso" id="piso" placeholder="Piso" />
-      </div>
-    </div>
-
-    <div class="row mb-3">
-      <div class="col-md-3">
-        <label for="pais">País*</label>
-        <select class="form-select form-select-sm" name="pais" th:field="*{pais}" id="pais"></select>
-      </div>
-
-      <div class="col-md-3">
-        <label for="provincia">Provincia*</label>
-        <input class="form-control form-control-sm" type="text" th:field="*{provincia}" name="provincia" id="provincia"
-          placeholder="Provincia" />
-      </div>
-      <div class="col-md-3">
-        <label for="localidad">Localidad*</label>
-        <input class="form-control form-control-sm" type="text" th:field="*{localidad}" name="localidad" id="localidad"
-          placeholder="Localidad" />
-      </div>
-      <div class="col-md-3">
-        <label for="codigo-postal">Código postal*</label>
-        <input class="form-control form-control-sm" type="number" th:field="*{codPostal}" name="codPostal" id="codigo-postal" placeholder="Código postal" />
-      </div>
-    </div>
-    <div class="row mb-2">
-      <div class="col-md-6">
-        <label for="telefono">Teléfono*</label>
-        <div class="input-group">
-          <div class="col-4 p-0">
-
-            <select class="form-select form-select-sm" th:field="*{prefijo}" name="prefijo" id="prefijo"></select>
-          </div>
-          <div class="col-8 p-0">
-
-            <input class="form-control form-control-sm" type="text" th:field="*{telefono}" name="telefono" id="telefono"
-            placeholder="Teléfono" />
-          </div>
-          </div>
-      </div>
-
-      <div class="col-md-6">
-        <label for="email">Email</label>
-        <input class="form-control form-control-sm" type="email" th:field="*{email}" name="email" id="email" placeholder="Email" />
-      </div>
-    </div>
-
-    <div class="row mb-3">
-      <div class="col-md-4">
-        <label for="ocupacion">Ocupación*</label>
-        <input class="form-control form-control-sm" type="text" th:field="*{ocupacion}" name="ocupacion" id="ocupacion"
-          placeholder="Ocupación" />
-      </div>
-
-      <div class="col-md-4">
-        <label for="posicion-iva">Posición frente al IVA*</label>
-        <select class="form-select form-select-sm" th:field="*{posicionIva}" name="posicionIva" id="posicion-iva">
-          <option value="consumidor-final" selected>
-            Consumidor Final
-          </option>
-          <option selected value="responsable-inscripto">
-            Responsable Inscripto
-          </option>
-          <option value="monotributista">Monotributista</option>
-          <option value="exento">Exento</option>
-        </select>
-      </div>
-
-      <div class="col-md-4">
-        <label for="cuit">C.U.I.T.</label>
-        <input class="form-control form-control-sm" type="text" th:field="*{cuit}" name="cuit" id="cuit"
-          placeholder="99-.99.999.999-9" />
-      </div>
-    </div>
-
-    <div class="text-end mt-4">
-      <button type="submit" id="boton" class="btn btn-primary">
-        Siguiente
-      </button>
-      <button class="btn btn-secondary" type="button" id="cancelar">Cancelar</button>
-    </div>
-  </form>
-  <ul id="errores"></ul>
-  <ul id="error-formato"></ul>
-    </div>
-  </div>
-  <script th:if="${error}">
-    let form = document.getElementById("formulario");
-    const modalError = document.getElementById("modal-error");
-    modalError.style.display = "block";
-    const botonAceptar = document.getElementById("button-aceptar");
-    const botonCorregir = document.getElementById("button-corregir");
-    botonAceptar.addEventListener("click", function () {
-      modalError.style.display = "none";
-      form.action = form.action + "?forzar=true";
-      form.submit();
-    });
-    botonCorregir.addEventListener("click", function () {
-      modalError.style.display = "none";
-    });
-  </script>
-</body>
-
-</html>
