--- a/src/main/resources/templates/reservarHabitacion.html
+++ b/src/main/resources/templates/reservarHabitacion.html
@@ -1,3 +1,7 @@
 <div th:fragment="page-content">
+  <script src="/reservarHabitacion.js"></script>
   <h1>Reservar Habitaciones</h1>
+    <div id="contenido">
+      <div th:replace="estadoHabitacion :: contenido"></div>
+  </div>
 </div>
