--- a/src/main/resources/templates/ocuparHabitacion.html
+++ b/src/main/resources/templates/ocuparHabitacion.html
@@ -1,3 +1,9 @@
 <div th:fragment="page-content">
+
+  <script src="/ocuparHabitacion.js"></script>
+
   <h1>Ocupar Habitacion</h1>
+  <div id="contenido">
+      <div th:replace="estadoHabitacion :: contenido"></div>
+  </div>
 </div>
