--- a/src/main/resources/templates/ocuparHabitacion.html
+++ b/src/main/resources/templates/ocuparHabitacion.html
@@ -4,6 +4,6 @@
 
   <h1>Ocupar Habitacion</h1>
   <div id="contenido">
-      <div th:replace="estadoHabitacion :: contenido"></div>
+      <div th:replace="estadoHabitaciones :: contenido"></div>
   </div>
 </div>
