--- a/src/main/resources/templates/reservarHabitacion.html
+++ b/src/main/resources/templates/reservarHabitacion.html
@@ -2,6 +2,6 @@
   <script src="/reservarHabitacion.js"></script>
   <h1>Reservar Habitaciones</h1>
     <div id="contenido">
-      <div th:replace="estadoHabitacion :: contenido"></div>
+      <div th:replace="estadoHabitaciones :: contenido"></div>
   </div>
 </div>
