--- a/src/main/resources/templates/estadoHabitaciones.html
+++ b/src/main/resources/templates/estadoHabitaciones.html
@@ -1,3 +1,56 @@
 <div th:fragment="page-content">
   <h1>Estado de las Habitaciones</h1>
+   <div class="table-responsive mb-4">
+            <table class="table table-bordered text-center align-middle">
+                <thead class="table-light">
+                    <tr>
+                        <th style="width:150px;">Fecha</th>
+                        <th colspan="10">Número de Habitación</th>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <th>XX</th>
+                        <th>XX</th>
+                        <th>XX</th>
+                        <th>XX</th>
+                        <th>XX</th>
+                        <th>XX</th>
+                        <th>XX</th>
+                        <th>XX</th>
+                        <th>XX</th>
+                        <th>XX</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <!-- Varias filas de ejemplo, vacías -->
+                    <tr>
+                        <td>dd/mm</td>
+                        <td></td><td></td><td></td><td></td><td></td>
+                        <td></td><td></td><td></td><td></td><td></td>
+                    </tr>
+                    <tr>
+                        <td>dd/mm</td>
+                        <td></td><td></td><td></td><td></td><td></td>
+                        <td></td><td></td><td></td><td></td><td></td>
+                    </tr>
+                    <tr>
+                        <td>dd/mm</td>
+                        <td></td><td></td><td></td><td></td><td></td>
+                        <td></td><td></td><td></td><td></td><td></td>
+                    </tr>
+                    <tr>
+                        <td>dd/mm</td>
+                        <td></td><td></td><td></td><td></td><td></td>
+                        <td></td><td></td><td></td><td></td><td></td>
+                    </tr>
+                    <tr>
+                        <td>dd/mm</td>
+                        <td></td><td></td><td></td><td></td><td></td>
+                        <td></td><td></td><td></td><td></td><td></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
 </div>
