--- a/src/main/resources/templates/estadoHabitaciones.html
+++ b/src/main/resources/templates/estadoHabitaciones.html
@@ -20,10 +20,12 @@
             <div class="mb-3">
                 <label class="form-label">Tipo de Habitación</label>
                 <select class="form-select" name="tipo">
-                    <option value="">Todas</option>
 
-                    <option th:each="t : ${tipos}" th:value="${t.name()}" th:text="${t.name()}"
-                        th:selected="${t.name() == tipoSeleccionado}">
+
+                    <option th:each="t : ${tipos}" 
+                    th:value="${t}" 
+                    th:text="${t}"
+                    th:selected="${t == tipoSeleccionado}">
                     </option>
                 </select>
             </div>
