Reservar Habitacion terminado

--- a/src/main/resources/templates/reservarHabitacion.html
+++ b/src/main/resources/templates/reservarHabitacion.html
@@ -115,15 +115,15 @@
                 <div class="modal-body">
                     <div class="mb-3">
                         <label for="nombre-cliente" class="form-label">Nombre:</label>
-                        <input type="text" class="form-control" id="nombre-cliente" required>
+                        <input type="text" class="form-control" id="nombre-cliente" name="nombre"  required>
                     </div>
                     <div class="mb-3">
                         <label for="apellido-cliente" class="form-label">Apellido:</label>
-                        <input type="text" class="form-control" id="apellido-cliente" required>
+                        <input type="text" class="form-control" id="apellido-cliente" name="apellido" required>
                     </div>
                     <div class="mb-3">
-                        <label for="dni-cliente" class="form-label">DNI:</label>
-                        <input type="text" class="form-control" id="dni-cliente" required>
+                        <label for="telefono-cliente" class="form-label">Teléfono:</label>
+                        <input type="text" class="form-control" id="telefono-cliente" name="telefono" required>
                     </div>
                     </div>
                 <div class="modal-footer">
