--- a/src/main/resources/templates/estadoHabitaciones.html
+++ b/src/main/resources/templates/estadoHabitaciones.html
@@ -1,5 +1,5 @@
 <div th:fragment="content">
-  <script src="/eventosTabla.js"></script>
+  <!-- <script src="/eventosTabla.js"></script> -->
     <table id="tabla-estados" border="1" cellpadding="5" cellspacing="0">
 
       <thead>
