--- a/src/main/resources/templates/reservarHabitacion.html
+++ b/src/main/resources/templates/reservarHabitacion.html
@@ -1,52 +1,11 @@
-<!-- <div th:fragment="page-content">
-  <script src="/reservarHabitacion.js" ></script>
-  <h1>Reservar Habitaciones</h1>
-    <label for="fechaInicio">Fecha de Inicio:</label>
-    <input type="date" id="fechaInicio" th:value="${fechaInicioSeleccionada}" name="fechaInicio" required>
-    <label for="fechaFin">Fecha de Fin:</label>
-    <input type="date" id="fechaFin"  th:value="${fechaFinSeleccionada}" name="fechaFin" required>
-    <label for="tipo">Tipo de Habitación</label>
-    <select name="tipo" id="tipo">
-      <option value="" 
-            th:if="${tipoSeleccionado == null or tipoSeleccionado == ''}" 
-            th:text="'Seleccione...'" 
-            disabled 
-            selected>
-    </option>
-            
-    <option th:each="tipo : ${tipos}"
-            th:text="${tipo}"
-            th:value="${tipo}"
-            th:selected="${tipoSeleccionado != null and tipo.toString() == tipoSeleccionado.toString()}">
-    </option>
-    </select>
-<div th:if="${mostrarTabla}" >
-  <div  th:replace="estadoHabitaciones :: content" ></div>
-</div>
-<button id="boton-reservar">Reservar</button>
-<div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="modalLabel">Confirmación de Reservas</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body" id="modalReservasBody">
-                </div>
-            <div class="modal-footer" id="modalReservasFooter">
-                </div>
-        </div>
-    </div>
-</div>
-
-</div> -->
 
 <div th:fragment="page-content">
-    <script src="/reservarHabitacion.js" ></script>
-    
+    <script src="/formularioGrilla.js" ></script>
+    <script src="/reservarHabitacion.js"></script>
+    <div id="ruta" hidden >reservar</div>
     <div class="container my-5 p-4 border rounded shadow-lg bg-white"> 
         
-        <h1 class="mb-4 text-center text-primary border-bottom pb-2">Reservar Habitaciones 🏨</h1>
+        <h1 class="mb-4 text-center text-primary border-bottom pb-2">Reservar Habitaciones</h1>
         
         <form class="row g-3 align-items-end mb-4">
             
