--- a/src/main/resources/templates/buscarOcupantes.html
+++ b/src/main/resources/templates/buscarOcupantes.html
@@ -117,6 +117,7 @@
                         </li>
                     </ul>
                 </div>
+                <button id="btn-aceptar" class="btn btn-primary" type="button">Aceptar</button>
             </div>
         </div>
     </div>
