--- a/src/main/resources/templates/reservarHabitacion.html
+++ b/src/main/resources/templates/reservarHabitacion.html
@@ -66,7 +66,7 @@
     <div class="modal fade" id="modal-cliente" tabindex="-1" aria-labelledby="modalClienteLabel" aria-hidden="true">
     <div class="modal-dialog modal-md modal-dialog-centered">
         <div class="modal-content">
-            <div class="modal-header bg-success text-white">
+            <div class="modal-header bg-primary text-white">
                 <h5 class="modal-title" id="modalClienteLabel">Datos del Cliente y Confirmación Final</h5>
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
@@ -86,8 +86,8 @@
                     </div>
                     </div>
                 <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary">ACEPTAR</button>
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="submit" class="btn btn-success">Confirmar y Enviar Reserva</button>
                 </div>
             </form>
         </div>
