--- a/src/main/resources/templates/buscarOcupantes.html
+++ b/src/main/resources/templates/buscarOcupantes.html
@@ -159,7 +159,7 @@
                 
                 <button
                     type="button"
-                    class="btn btn-warning"
+                    class="btn btn-primary"
                     id="btn-otra-habitacion"
                     data-bs-dismiss="modal" 
                 >
