--- a/src/main/resources/templates/ocuparHabitacion.html
+++ b/src/main/resources/templates/ocuparHabitacion.html
@@ -102,7 +102,7 @@
     >
         <div class="modal-dialog modal-md modal-dialog-centered">
             <div class="modal-content">
-                <div class="modal-header bg-warning text-dark">
+                <div class="modal-header bg-primary text-dark">
                     <h5 class="modal-title" id="modalConfirmacionLabel">
                         Habitación YA Reservada
                     </h5>
@@ -125,7 +125,7 @@
                 <div class="modal-footer justify-content-center">
                     <button
                         type="button"
-                        class="btn btn-warning"
+                        class="btn btn-primary"
                         id="btn-ocupar-igual"
                     >
                         OCUPAR IGUAL
